[package]
name = "tracking"
description = "A simple inside-out tracking demo for custom vr headsets"
version = "0.1.0"
license = "ISC"
edition = "2021"

# MSRV
rust-version = "1.70.0"

[dependencies]
pixels = "0.13.0"
winit = "0.29.9"
[dependencies.image]
version = "0.24.7"
default-features = false

[dependencies.nokhwa]
version = "0.10.1"
features = ["input-native", "output-threaded"]
